--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -78,7 +78,7 @@
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/icons/running.png" />
+                        <Image url="@images/icons/group.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -114,7 +114,7 @@
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/icons/running.png" />
+                        <Image url="@images/icons/distance.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -123,7 +123,7 @@
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/icons/document.png" />
+                        <Image url="@images/icons/leader.png" />
                      </image>
                   </ImageView>
                </graphic>
