--- a/src/main/resources/view/RelayRunPage.fxml
+++ b/src/main/resources/view/RelayRunPage.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.RelayRunPageController">
    <children>
-      <GridPane alignment="CENTER" layoutX="48.0" layoutY="4.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="1068.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="-6.0">
+      <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="1076.0">
          <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="518.4000244140625" minWidth="10.0" prefWidth="343.0000366210937" />
             <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="702.0000366210938" minWidth="10.0" prefWidth="683.7999633789061" />
@@ -31,7 +31,7 @@
          </rowConstraints>
          <children>
 
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="342.0" style="-fx-background-color: #3C76F1; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Cоздать эстафету" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="332.0" style="-fx-background-color: #3C76F1; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Cоздать эстафету" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
 
 
                <font>
@@ -40,45 +40,38 @@
             </Button>
             <Pane prefHeight="429.0" prefWidth="343.0" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                <children>
-                  <TableView layoutX="27.0" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="282.0" stylesheets="@css/table.css">
+                  <TableView layoutX="14.0" maxHeight="-Infinity" prefHeight="370.0" prefWidth="288.0" stylesheets="@css/table.css">
                     <columns>
-                      <TableColumn prefWidth="32.0" resizable="false" />
-                      <TableColumn prefWidth="248.0" text="Название" />
+                      <TableColumn prefWidth="287.1999988555908" text="Название" />
                     </columns>
                   </TableView>
                </children>
             </Pane>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Присвоить чип" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <TableView layoutX="1.0" prefHeight="370.0" stylesheets="@css/table.css">
                      <columns>
-                        <TableColumn prefWidth="30.0" resizable="false" />
                         <TableColumn prefWidth="100.0" resizable="false" text="Фамилия" />
                         <TableColumn prefWidth="150.0" text="Дата рождения" />
                         <TableColumn prefWidth="100.0" resizable="false" text="Номер" />
                         <TableColumn prefWidth="100.0" resizable="false" text="Чип" />
                         <TableColumn prefWidth="100.0" resizable="false" text="Пол" />
-                        <TableColumn prefWidth="100.0" resizable="false" text="Город" />
+                        <TableColumn prefWidth="127.2001953125" resizable="false" text="Город" />
                      </columns>
                   </TableView>
                </children>
             </Pane>
-            <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="39.0" prefWidth="356.0" GridPane.rowIndex="1">
+            <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="39.0" prefWidth="337.0" GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.20001220703125" minWidth="10.0" prefWidth="118.20001831054688" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="331.4000244140625" minWidth="10.0" prefWidth="225.39998168945314" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="224.20001220703125" minWidth="10.0" prefWidth="128.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="331.4000244140625" minWidth="10.0" prefWidth="229.60000000000002" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="197.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                  <Label prefHeight="26.0" prefWidth="125.0" text="Текущая эстафета" textFill="#555555" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="202.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                  <Label prefHeight="26.0" text="Текущая эстафета" textFill="#555555" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -169,10 +162,24 @@
                   </Button>
                </children>
             </GridPane>
+            <GridPane prefHeight="51.0" prefWidth="668.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="565.8" minWidth="10.0" prefWidth="565.5999267578125" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.20001220703125" minWidth="0.0" prefWidth="0.2000732421875" />
+              </columnConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="474.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Присвоить чип" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </GridPane>
    </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
 </AnchorPane>
