--- a/src/main/resources/view/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/MarksMonitorCompetition.fxml
@@ -65,7 +65,7 @@
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin></TextField>
-                        <Button mnemonicParsing="false" prefWidth="66.0" styleClass="little-button-add" stylesheets="@css/table.css" text="Старт" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                        <Button mnemonicParsing="false" prefWidth="66.0" styleClass="little-button-del" stylesheets="@css/table.css" text="Стоп" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -76,10 +76,13 @@
                            </font>
                         </TextField>
                         <Label text="Начало отсчета времени" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                        <Button mnemonicParsing="false" styleClass="little-button-add" stylesheets="@css/table.css" text="Старт" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                        <Button mnemonicParsing="false" styleClass="little-button-add-blue" stylesheets="@css/table.css" text="Старт" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                            <font>
                               <Font size="14.0" />
                            </font>
+                           <GridPane.margin>
+                              <Insets right="30.0" />
+                           </GridPane.margin>
                         </Button>
                      </children>
                      <padding>
@@ -136,16 +139,16 @@
                            <children>
                               <TableView layoutX="-6.0" prefHeight="318.0" stylesheets="@css/table.css">
                                  <columns>
-                                    <TableColumn prefWidth="42.39999341964722" resizable="false" text="№" />
-                                    <TableColumn prefWidth="101.60000991821289" resizable="false" text="Участник" />
-                                    <TableColumn prefWidth="56.79998779296875" resizable="false" text="Пол" />
-                                    <TableColumn prefWidth="69.59999084472656" resizable="false" text="Чип" />
-                                    <TableColumn prefWidth="130.39996337890625" resizable="false" text="Стартовый номер" />
-                                    <TableColumn prefWidth="133.60000610351562" resizable="false" text="Дата рождения" />
-                                    <TableColumn prefWidth="130.40008544921875" resizable="false" text="Город" />
-                                    <TableColumn prefWidth="125.5999755859375" resizable="false" text="Клуб" />
-                                    <TableColumn prefWidth="138.4000244140625" resizable="false" text="Разряд" />
-                                    <TableColumn prefWidth="145.60003662109375" resizable="false" text="Группа" />
+                                    <TableColumn prefWidth="50.0" resizable="false" text="№" />
+                                    <TableColumn prefWidth="100.0" resizable="false" text="Участник" />
+                                    <TableColumn prefWidth="50.0" resizable="false" text="Пол" />
+                                    <TableColumn prefWidth="130.0" resizable="false" text="Чип" />
+                                    <TableColumn prefWidth="130.0" resizable="false" text="Стартовый номер" />
+                                    <TableColumn prefWidth="130.0" resizable="false" text="Дата рождения" />
+                                    <TableColumn prefWidth="120.0" resizable="false" text="Город" />
+                                    <TableColumn prefWidth="120.0" resizable="false" text="Клуб" />
+                                    <TableColumn prefWidth="120.0" resizable="false" text="Разряд" />
+                                    <TableColumn prefWidth="120.0" resizable="false" text="Группа" />
                                  </columns>
                               </TableView>
                            </children>
