--- a/src/main/resources/view/MarksGroupPopup.fxml
+++ b/src/main/resources/view/MarksGroupPopup.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -32,10 +33,15 @@
          </font>
       </Label>
       <TextField fx:id="lapTextField" layoutX="180.0" layoutY="393.0" prefHeight="31.0" prefWidth="185.0" />
-      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" prefHeight="37.0" prefWidth="174.0" stylesheets="@css/AgreeButton.css" text="Сохранить данные">
+      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" prefHeight="37.0" prefWidth="174.0" stylesheets="@css/Buttons.css" text="Сохранить данные">
          <font>
             <Font size="14.0" />
          </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn-common" />
+            <String fx:value="btn-success" />
+         </styleClass>
       </Button>
       <TableView fx:id="runTable" layoutX="24.0" layoutY="81.0" prefHeight="290.0" prefWidth="710.0" stylesheets="@css/table.css">
         <columns>
